# iga-assistant

./: .gaia-session-id  .gitguardian.yaml  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  gaia_memory_protocol.md  iga_memory_protocol.md  pyproject.toml
.claude/commands/: gaia.md  iga.md
.githooks/: GUARD_NOTES.md  README.md  commit-msg  iga-guard.sh  iga-judge.py  pre-commit  pre-push
community_rules/: daily_commands.md  github.md  google_calendar.md  iga-mcp.md  jira.md  linear.md  notion.md  slack.md  todoist.md
community_skills/: README.md
community_skills/email/: README.md  SKILL.md  package.json  pnpm-lock.yaml  tsconfig.json
community_skills/email/docs/: setup-launchd.md
community_skills/email/src/: classifier.ts  cli.ts  config-loader.ts  gmail.ts  hook-runner.ts  label-resolver.ts  mcp-server.ts  pre-filter.ts  triage.ts  types.ts
community_skills/email/test/: batch-grouping.test.ts  classifier.test.ts  config-loader.test.ts  ensure-labels.test.ts  google-auth.test.ts  label-colors.test.ts  mcp-server.test.ts  pre-filter.test.ts  triage.test.ts
community_skills/iga-proactive/: CHANGELOG.md  README.md  proactive.example.yaml
community_skills/iga-proactive/app/: Package.swift  build.sh
community_skills/iga-proactive/docs/: architecture.md  oss-publishing.md  security.md
community_skills/iga-proactive/engine/: __init__.py  __main__.py  cli.py  dispatcher.py  ledger.py  schema.py  surfacer.py
community_skills/iga-proactive/tests/: test_cli.py  test_dispatcher.py  test_governor.py  test_ledger.py  test_runtime.py  test_schema.py  test_surfacer.py  test_triggers.py
community_skills/mempalace-seed/engine/: categories.py  import_seed.py  nondestructive.py  seed_schema.py  tiebreaker.py
community_skills/mempalace-seed/tests/: test_dump_material.py  test_nondestructive.py  test_palace_reader.py  test_prompts_present.py  test_seed_schema.py  test_tiebreaker.py
docs/: state-storage-convention.md
docs/designs/: supersedence-edges.md
evals/: .env.example  .gitignore  README.md  package.json  promptfooconfig.yaml  tsconfig.json  vitest.config.ts
evals/fixtures/drawers/: baseline.json  brand-rebrand.json  customer-correction.json
evals/judges/: relevance-judge.md  staleness-judge.md
evals/mocks/: README.md  fixtureLoader.ts  mcp-server.ts  mcpToolRouter.ts
evals/scenarios/: brand-rebrand-suppressed.yaml  customer-correction-respected.yaml  legit-deadline-surfaced.yaml
evals/scenarios-tier2/: correctly-skips-irrelevant-search.yaml  decision-to-search-before-classifying.yaml  fan-out-query-expansion.yaml
evals/src/: calibrateInChat.ts  runJudge.ts  runScenario.ts  runScenarioTier2.ts  testSetup.ts  types.ts
evals/test/: judges.test.ts  scenarios-tier2.test.ts  scenarios.test.ts
gaia_mcp/: pyproject.toml
gaia_mcp/src/gaia_mcp/: __init__.py  server.py
iga_mcp/: README.md  pyproject.toml
iga_mcp/src/iga_mcp/: __init__.py  server.py  skills.py
iga_mcp/tests/: test_skill_tools.py
scripts/: rename-gaia-to-iga.sh  setup-iga-mcp.sh
skills/create-iga-skill/: SKILL.md
skills/habit-tracker/: SKILL.md  proactive.yaml
skills/habit-tracker/engine/: export_habitkit.py  import_habitkit.py  manage.py  producer.py  record.py  reflection.prompt.md  stats.py  substrate.py  summary.py  widget_projection.py
skills/habit-tracker/tests/: _engine.py  _synthetic.py  conftest.py  test_engine_discovery.py  test_habits_projection.py  test_import_habitkit.py  test_isolation_privacy_guard.py  test_manage.py  (+7 more)
skills/iga-proactive/: README.md  SKILL.md
skills/iga-proactive-research/: README.md  SKILL.md  proactive.yaml
skills/mempalace-seed/: SKILL.md
skills/mood-tracker/: SKILL.md
skills/newsletter-research/: README.md  SKILL.md  proactive.yaml
(+158 files in other folders)
