[project]
name = "gaia-mcp"
version = "0.1.0"
description = "Gaia MCP server — expose Gaia (a persistent Claude Code session) as a globally-accessible MCP for any other Claude Code session."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
gaia-mcp = "gaia_mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gaia_mcp"]
