[project]
name = "iga-mcp"
version = "0.1.0"
description = "Iga MCP server — expose Iga (a persistent Claude Code session) as a globally-accessible MCP for any other Claude Code session."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
iga-mcp = "iga_mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iga_mcp"]
